cmake_minimum_required(VERSION 3.8)

project(FlexProxy)

set(FLEXPROXY_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/out)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${FLEXPROXY_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${FLEXPROXY_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${FLEXPROXY_OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${FLEXPROXY_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${FLEXPROXY_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${FLEXPROXY_OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${FLEXPROXY_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${FLEXPROXY_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${FLEXPROXY_OUTPUT_DIR})

add_subdirectory(Thirdparty/JsonMapper)

add_subdirectory(FlexProxy)